--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "next": "15.0.3",
     "papaparse": "^5.4.1",
+    "posthog-js": "^1.188.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
