--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.7",
     "axios": "^1.7.7",
     "fs": "^0.0.1-security",
     "next": "15.0.3",
