Upgraded react, react-dom, next

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@supabase/supabase-js": "^2.47.7",
     "axios": "^1.7.7",
     "fs": "^0.0.1-security",
-    "next": "15.0.3",
+    "next": "^15.1.0",
     "papaparse": "^5.4.1",
     "posthog-js": "^1.188.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "eslint": "^8",
