--- a/.github/workflows/add_new_urls.yml
+++ b/.github/workflows/add_new_urls.yml
@@ -1,10 +1,11 @@
 name: Add New URLs
-
 on:
   schedule:
     - cron: 0 0 * * *
   workflow_dispatch:
-
+env:
+  SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+  SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
 jobs:
   fetch-data:
     runs-on: ubuntu-latest
