--- a/.github/workflows/add_new_urls.yml
+++ b/.github/workflows/add_new_urls.yml
@@ -7,7 +7,7 @@ env:
   SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
   SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
 jobs:
-  fetch-data:
+  add-new-urls:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
