--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
     "@supabase/supabase-js": "^2.47.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
