--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/supabase-js": "^2.47.7",
     "axios": "^1.7.7",
