--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@supabase/supabase-js": "^2.47.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
