--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "fs": "^0.0.1-security",
     "lucide-react": "^0.487.0",
     "next": "^15.1.0",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.4.1",
     "posthog-js": "^1.188.0",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
