--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@/types/*": ["types/*"],
-      "@/components/*": ["app/components/*"],
+      "@/components/*": ["components/*"],
       "@/lib/*": ["lib/*"],
       "@/pages/*": ["pages/*"],
       "@/app/*": ["app/*"],
