--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.487.0",
+    "motion": "^12.9.4",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "papaparse": "^5.4.1",
