--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.487.0",
     "motion": "^12.9.4",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "papaparse": "^5.4.1",
+    "postgres": "^3.4.5",
     "posthog-js": "^1.188.0",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
@@ -41,10 +44,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "19.0.8",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.3",
+    "tsx": "^4.19.4",
     "typescript": "^5.7.3"
   }
 }
